--- a/Dataset and Code/FinalModelwithOutlierValidation.ipynb
+++ b/Dataset and Code/FinalModelwithOutlierValidation.ipynb
@@ -1011,16 +1011,14 @@
     "# Evaluate the model\n",
     "loss, accuracy = model.evaluate(X_test, y_test, verbose=0)\n",
     "print(f'Test Accuracy: {accuracy:.4f}')\n",
-    "# Model Evaluation Section\n",
-    "# Assuming you have the true labels and predictions ready\n",
-    "y_pred = model.predict(X_test)\n",
-    "y_pred = (y_pred > 0.5).astype(int)  # Convert probabilities to binary predictions if needed\n",
     "\n",
-    "# Insert the new code here\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred = (y_pred > 0.5).astype(int)\n",
+    "\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "\n",
     "# Calculate precision, recall, and F1 score\n",
-    "precision = precision_score(y_test, y_pred, average='binary')  # Use 'micro', 'macro', 'weighted' for multi-class\n",
+    "precision = precision_score(y_test, y_pred, average='binary')\n",
     "recall = recall_score(y_test, y_pred, average='binary')\n",
     "f1 = f1_score(y_test, y_pred, average='binary')\n",
     "\n",
